Bug 1160154 - Decrease padding between icons in the personal toolbar with Gtk3 by using "image-button" css style class. r=karlt CLOSED TREE

--HG--
extra : rebase_source : b8c2ed8403294ac2b1931141794f184af2a11cbd